# mirror-man

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mirror_man/: cli.py  mirror_data.py  os_info.py  sources.py
tests/: test_cli.py  test_os_info.py  test_sources.py
